syntax = "proto3";
package org.roylance.yadel.api.models;

message WorkerConfiguration {
    string ip = 1;
    string port = 2;
    string host = 3;
    uint64 initialized_time = 4;
    WorkerState state = 5;
}

enum WorkerState {
    WORKING = 0;
    IDLE = 1;
}

enum WorkerToManagerMessageType {
    REGISTRATION = 0;
}

enum ManagerToManagerMessageType {
    ENSURE_WORKERS_WORKING = 0;
}

enum ActorRole {
    MANAGER = 0;
    WORKER = 1;
}

message DagDefinition {
    string id = 1;
    string display = 2;
    map<string, TaskDefinition> flattened_tasks = 3;
}

message TaskDefinition {
    string id = 1;
    string display = 2;
    map<string, TaskDefinition> dependencies = 3;
    DagDefinition dag_definition = 4;
    repeated string logs = 5;
}

message Dag {
    DagDefinition dag_definition = 1;
    int64 execution_date = 2;
    int64 start_date = 3;
    int64 end_date = 4;
    int64 duration = 5;
    map<string, Task> uncompleted_tasks = 6;
    map<string, Task> processing_tasks = 7;
    map<string, CompleteTask> errored_tasks = 8;
    map<string, CompleteTask> completed_tasks = 9;
}

message Task {
    TaskDefinition task_definition = 1;
    int64 execution_date = 2;
    int64 start_date = 3;
    int64 end_date = 4;
    int64 duration = 5;
    string first_context_base_64 = 6;
    string second_context_base_64 = 7;
    string third_context_base_64 = 8;
}

message AddTaskToDag {
    TaskDefinition parent_task = 1;
    TaskDefinition new_task = 2;
    string first_context_base_64 = 3;
    string second_context_base_64 = 4;
    string third_context_base_64 = 5;
}

message CompleteTask {
    TaskDefinition task_definition = 1;
    WorkerConfiguration worker_configuration = 2;
    repeated string logs = 3;
    bool is_error = 4;
}